# plyn

./: .gitignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  README.md  crm_common.plain  hubspot.plain  integration_testing.plain  language-configuration.json  package-lock.json  package.json  tsconfig.json
scripts/: compile.sh
src/: builtins.ts  definition_provider.ts  diagnostics.ts  extension.ts  folding_provider.ts  hover_provider.ts  preprocessor.ts  rename_provider.ts
syntaxes/: plain.tmLanguage.json
zed/: .gitignore  Cargo.toml  LICENSE  extension.toml  sample.plain
zed/icon_themes/: plain.json
zed/languages/plain/: brackets.scm  config.toml  folds.scm  highlights.scm  injections.scm
zed/src/: lib.rs
